[gd_scene load_steps=4 format=3 uid="uid://5jnrm8tmmmln"]

[ext_resource type="Texture2D" uid="uid://ct2mftvh545kf" path="res://assets/textures/turret.png" id="1_ltjpe"]
[ext_resource type="Script" uid="uid://colxaohpk1arw" path="res://entities/enemies/turret.gd" id="2_x15t2"]
[ext_resource type="PackedScene" uid="uid://pyhjbddc115x" path="res://entities/enemies/EnemyProjectile.tscn" id="3_x15t2"]

[node name="Turret" type="Sprite2D"]
texture = ExtResource("1_ltjpe")
script = ExtResource("2_x15t2")
projectile_scene = ExtResource("3_x15t2")

[node name="FirePosition" type="Marker2D" parent="."]
position = Vector2(0, -25)

[node name="FireTimer" type="Timer" parent="."]

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
